<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.Confirmation"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/txt_congratulations"
        android:textColor="@color/green"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_iv_comic"
        android:layout_width="180dp"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_congratulations"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:id="@+id/iv_comic"
            android:layout_width="180dp"
            android:layout_height="240dp"
            android:src="@drawable/marvel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/star"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:src="@drawable/ic_baseline_star_24"
            android:layout_marginStart="150dp"
            android:visibility="gone"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title_comic"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_comic_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fl_iv_comic"
        app:layout_constraintTop_toTopOf="@id/fl_iv_comic" />

    <TextView
        android:id="@+id/tv_format_comic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txt_format"
        android:textColor="@color/black_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        app:layout_constraintStart_toStartOf="@id/tv_title_comic"
        app:layout_constraintTop_toBottomOf="@id/tv_title_comic" />

    <TextView
        android:id="@+id/tv_modify_comic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_modify"
        android:textColor="@color/black_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        app:layout_constraintStart_toStartOf="@id/tv_title_comic"
        app:layout_constraintTop_toBottomOf="@id/tv_format_comic" />

    <TextView
        android:id="@+id/tv_quantity_comics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity_comics"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_quatity_comics_un"
        app:layout_constraintEnd_toStartOf="@id/tv_quatity_comics_un"
        />

    <TextView
        android:id="@+id/tv_quatity_comics_un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_un"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/fl_iv_comic" />

    <TextView
        android:id="@+id/tv_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_for"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="24sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@id/fl_iv_comic"
        app:layout_constraintBottom_toBottomOf="@id/tv_price_comic"
        />


    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_currency"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tv_for"
        app:layout_constraintBottom_toBottomOf="@id/tv_price_comic"
        />

    <TextView
        android:id="@+id/tv_price_comic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_iv_comic"
        app:layout_constraintStart_toEndOf="@id/tv_currency"
        android:layout_marginHorizontal="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/txt_comic_price"
        />
    <TextView
        android:id="@+id/tv_check_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_price_comic"
        app:layout_constraintStart_toStartOf="@id/tv_congratulations"
        android:text="@string/txt_used_coupon"
        android:layout_marginHorizontal="30dp"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/keep_buying"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/txt_keep_buying"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_congratulations"
        app:layout_constraintStart_toStartOf="@id/tv_congratulations"/>

</androidx.constraintlayout.widget.ConstraintLayout>