<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.DetailsActivity">

    <FrameLayout
        android:id="@+id/fl_iv_comic"
        android:layout_width="288dp"
        android:layout_height="384dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        >
    <ImageView
        android:id="@+id/iv_comic"
        android:layout_width="288dp"
        android:layout_height="384dp"
        android:src="@drawable/marvel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/star"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_star_24"
            android:layout_marginStart="240dp"
            android:visibility="gone"
            />
    </FrameLayout>


    <TextView
        android:id="@+id/tv_title_comic"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_comic_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/fl_iv_comic"
        app:layout_constraintStart_toStartOf="@id/fl_iv_comic"
        app:layout_constraintTop_toBottomOf="@id/fl_iv_comic" />
    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_currency"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/tv_price_comic"
        app:layout_constraintBottom_toBottomOf="@id/tv_price_comic"
        />

    <TextView
        android:id="@+id/tv_price_comic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/txt_comic_price"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/fl_iv_comic"
        app:layout_constraintTop_toBottomOf="@id/tv_title_comic" />

    <TextView
        android:id="@+id/tv_quatity_comics"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/txt_quantity_comics"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_comic"
        app:layout_constraintTop_toTopOf="@id/tv_price_comic" />
    <TextView
        android:id="@+id/tv_quatity_comics_un"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/txt_un"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/tv_quatity_comics"
        app:layout_constraintBottom_toBottomOf="@id/tv_quatity_comics" />
    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_price_comic"
        app:layout_constraintEnd_toEndOf="@id/tv_price_comic"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_discount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_discount"
        app:layout_constraintEnd_toStartOf="@id/tv_discount"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:text="@string/txt_discount"
        android:visibility="gone"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_price_comic"
        app:layout_constraintStart_toStartOf="@id/fl_iv_comic"
        app:layout_constraintEnd_toEndOf="@id/fl_iv_comic"
        android:layout_marginTop="40dp"
        android:inputType="textCapCharacters"
        android:hint="@string/txt_discount_coupon"
        android:background="@color/white"
        android:backgroundTint="@color/gray_light"
        />
    <TextView
        android:id="@+id/coupon_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_text"
        app:layout_constraintEnd_toEndOf="@id/input_text"
        android:text="@string/txt_valid_coupon"
        android:textColor="@color/green"
        android:visibility="gone"/>
    <Button
        android:id="@+id/button_buy"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/txt_buy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fl_iv_comic"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/fl_iv_comic"/>


</androidx.constraintlayout.widget.ConstraintLayout>