<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.view.Details">

    <ImageView
        android:id="@+id/iv_comic"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/marvel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_comic"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_comic_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_comic"
        app:layout_constraintTop_toTopOf="@id/iv_comic" />

    <TextView
        android:id="@+id/tv_format_comic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txt_format"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        app:layout_constraintStart_toStartOf="@id/tv_title_comic"
        app:layout_constraintTop_toBottomOf="@id/tv_title_comic" />

    <TextView
        android:id="@+id/tv_modify_comic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_modify"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        app:layout_constraintStart_toStartOf="@id/tv_title_comic"
        app:layout_constraintTop_toBottomOf="@id/tv_format_comic" />

    <TextView
        android:id="@+id/tv_price_comic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/txt_comic_price"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_modify_comic"
        app:layout_constraintBottom_toBottomOf="@id/iv_comic"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/tv_description_comic"
        android:layout_width="0dp"
        android:layout_height="340dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_description_comic"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_comic"
        app:layout_constraintStart_toStartOf="@id/iv_comic"
        app:layout_constraintTop_toBottomOf="@id/iv_comic" />

    <it.sephiroth.android.library.numberpicker.NumberPicker
        style="@style/NumberPicker.Filled"
        app:picker_max="100"
        app:picker_min="0"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:progress="50"
        app:picker_stepSize="2"
        app:picker_tracker="exponential"
        app:picker_orientation="horizontal"
        android:id="@+id/numberPicker"
        android:layout_width="130dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        tools:targetApi="p" />


    <Button
        android:id="@+id/button_buy"
        android:text="@string/txt_buy"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/numberPicker"
        app:layout_constraintEnd_toEndOf="@id/tv_description_comic" />


</androidx.constraintlayout.widget.ConstraintLayout>